<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/write_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_to_tag" >
        </Button>

        <Button
            android:id="@+id/read_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_to_tag" >
        </Button>
    </LinearLayout>

    <EditText
        android:id="@+id/note"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="top"
        android:text="@string/default_note_text" >
    </EditText>

    <EditText
        android:id="@+id/noteRead"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="top"
        android:text="读取IC卡内容" >
    </EditText>

</LinearLayout>