<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <include android:id="@+id/title_include" layout="@layout/title_bar"/>

    <TextView
        android:id="@+id/register_phone_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_phone"
        android:textColor="@color/lead_regiater"
        android:layout_below="@id/title_include"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        />

    <RelativeLayout
        android:id="@+id/register_email_rela"
        android:layout_width="250dp"
        android:layout_height="135dp"
        android:layout_below="@id/register_phone_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_view_bg">
        <EditText
            android:id="@+id/register_email_user"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:inputType="textEmailAddress"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/text_view_and_kuang"
            android:hint="@string/email"
            android:textColorHint="@color/hint_color_text"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/text_view_and_kuang"
            android:layout_below="@id/register_email_user"
            />
        <EditText
            android:id="@+id/register_email_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:password="true"
            android:layout_marginTop="51dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/text_view_and_kuang"
            android:hint="@string/pwd"
            android:textColorHint="@color/hint_color_text"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/text_view_and_kuang"
            android:layout_below="@id/register_email_pwd"
            />
        <EditText
            android:id="@+id/register_email_comfire_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:password="true"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/text_view_and_kuang"
            android:layout_alignParentBottom="true"
            android:hint="@string/comfire_pwd"
            android:textColorHint="@color/hint_color_text"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/register_btn_email"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_below="@id/register_email_rela"
        android:layout_marginLeft="10dp"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:background="@drawable/register_btn_selector"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/register_email_old_user_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/old_user_login1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textColor="@color/lead_regiater"
        />
</RelativeLayout>
