<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/login_back"/>

    <RelativeLayout
        android:id="@+id/login_rela"
        android:layout_width="250dp"
        android:layout_height="90dp"
        android:layout_below="@id/login_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_view_bg">
      <EditText
          android:id="@+id/login_user"
          android:layout_width="match_parent"
          android:layout_height="40dp"
          android:background="@null"
          android:layout_marginTop="3dp"
          android:layout_marginBottom="3dp"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:hint="@string/user_num"
          android:lines="1"
          android:textColorHint="@color/hint_color_text"
          android:textColor="@color/text_view_and_kuang"
          android:imeOptions="actionNext"
          />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/text_view_and_kuang"
            android:layout_centerInParent="true"
            />
        <EditText
            android:id="@+id/login_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:inputType="textPassword"
            android:layout_alignParentBottom="true"
            android:textColorHint="@color/hint_color_text"
            android:hint="@string/pwd"
            android:lines="1"
            android:textColor="@color/text_view_and_kuang"
            android:imeOptions="actionDone"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_rela2"
        android:layout_below="@id/login_rela"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_button_selector"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/login_new_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user_register"
            android:layout_marginRight="20dp"
            android:textColor="@color/login_new_user"
            />
        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@color/login_forget_pwd"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/login_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/login_forget_pwd"
            android:text="@string/forget_pwd"
            />
    </LinearLayout>
    <include layout="@layout/progress_bar"/>
</RelativeLayout>
