<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/date_pick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:orientation="vertical"
		android:visibility="gone"
        >
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c3c3c3"
            />
        <RelativeLayout
            android:id="@+id/date_tab"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            >
            <Button 
	            android:id="@+id/date_cancel"
	            android:layout_width="60dp"
	            android:layout_height="match_parent"
	            android:layout_margin="5dp"
	            android:layout_alignParentLeft="true"
	            android:layout_centerVertical="true"
	            android:text="@string/cancel"
	            android:textColor="#ffffff"
	            android:background="@drawable/timer_selector_btn"
	            />
            <Button 
	            android:id="@+id/search_btn"
	            android:layout_width="60dp"
	            android:layout_height="match_parent"
	            android:layout_margin="5dp"
	            android:layout_alignParentRight="true"
	            android:layout_centerVertical="true"
	            android:text="@string/search"
	            android:textColor="@color/text_color_white"
	            android:background="@drawable/timer_selector_btn"
	            />
        </RelativeLayout>
        
        
        <RelativeLayout 
            android:id="@+id/layout_cNumber"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@anim/corner_tiao_single_bg"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            >
            <EditText 
                android:id="@+id/start_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="35dp"
                android:textSize="15sp"
                android:textColor="@color/text_color_black"
                android:gravity="left|center_vertical"
                android:text=""
                android:singleLine="true"
                android:inputType="number"
                android:background="#00000000"
                android:hint="@string/start_time"
                />
			<RelativeLayout
				android:id="@+id/delete_start_time_rela"
				android:layout_width="35dp"
				android:layout_height="match_parent"
				android:visibility="gone"
				android:layout_alignParentRight="true">
				<ImageView
					android:clickable="true"
					android:layout_width="15dp"
					android:layout_height="15dp"
					android:src="@drawable/shanchu_selector"
					android:layout_centerInParent="true"
					/>
			</RelativeLayout>

    	</RelativeLayout>
    	
        <RelativeLayout 
            android:id="@+id/layout_cNumber2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@anim/corner_tiao_single_bg"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            >
            <EditText 
                android:id="@+id/end_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="15sp"
                android:textColor="@color/text_color_black"
                android:gravity="left|center_vertical"
                android:text=""
                android:singleLine="true"
                android:inputType="number"
                android:background="#00000000"
                android:hint="@string/end_time"
                />

			<RelativeLayout
				android:id="@+id/delete_end_time_rela"
				android:layout_width="35dp"
				android:layout_height="match_parent"
				android:visibility="gone"
				android:layout_alignParentRight="true">
				<ImageView
					android:clickable="true"
					android:layout_width="15dp"
					android:layout_height="15dp"
					android:src="@drawable/shanchu_selector"
					android:layout_centerInParent="true"
					/>
			</RelativeLayout>
    	</RelativeLayout>
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_marginTop="20dp"
	        android:orientation="vertical"
	        >
	        
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" 
		        >
		        <TextView 
			        android:id="@+id/textY"
			        android:layout_width="70dp"
			        android:layout_height="40dp"
			        android:gravity="center"
			        android:text="@string/year"
			        android:textStyle="bold"
			        android:textSize="15sp"
			        android:textColor="@color/text_color_black"
			        />
		        <TextView 
			        android:id="@+id/textM"
			        android:layout_width="0dp"
					android:layout_weight="1"
			        android:layout_height="40dp"
			        android:gravity="center"
			        android:text="@string/month"
			        android:textStyle="bold"
			        android:textSize="15sp"
			        android:textColor="@color/text_color_black"
			        />
		        <TextView 
			        android:id="@+id/textD"
			        android:layout_width="0dp"
					android:layout_weight="1"
			        android:layout_height="40dp"
			        android:gravity="center"
			        android:text="@string/day"
			        android:textStyle="bold"
			        android:textSize="15sp"
			        android:textColor="@color/text_color_black"
			        />
		        <TextView 
			        android:id="@+id/textH"
			        android:layout_width="0dp"
					android:layout_weight="1"
			        android:layout_height="40dp"
			        android:gravity="center"
			        android:text="@string/hour"
			        android:textStyle="bold"
			        android:textSize="15sp"
			        android:textColor="@color/text_color_black"
			        />
		        <TextView 
			        android:id="@+id/textMi"
			        android:layout_width="0dp"
					android:layout_weight="1"
			        android:layout_height="40dp"
			        android:gravity="center"
			        android:text="@string/minutes"
			        android:textStyle="bold"
			        android:textSize="15sp"
			        android:textColor="@color/text_color_black"
			        />
		    </LinearLayout>
		    <LinearLayout 
		       	android:layout_width="match_parent"
		    	android:layout_height="wrap_content" 
		    	android:orientation="horizontal"
		        >
		        <com.smart.cloud.fire.view.WheelView 
			        android:id="@+id/date_year"
					android:layout_height="wrap_content"
					android:layout_width="70dp"
					/>
		        <com.smart.cloud.fire.view.WheelView 
			        android:id="@+id/date_month"
					android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="1"
					/>
		        <com.smart.cloud.fire.view.WheelView 
			        android:id="@+id/date_day"
					android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="1"
					/>
		        <com.smart.cloud.fire.view.WheelView 
			        android:id="@+id/date_hour"
					android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="1"
					/>
		        <com.smart.cloud.fire.view.WheelView 
			        android:id="@+id/date_minute"
					android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="1"
					/>
		    </LinearLayout>
        </LinearLayout>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            />
    </LinearLayout>